unpackaged/main/default/objects/Consultation_Form__c/Consultation_Form__c.object-meta.xml
<CustomObject>
    <description>Consultation Forms are filled out during consultations and follow ups with OptiMale Doctors</description>
    <label>Consultation Form</label>
    <nameField>
        <displayFormat>CONS-{000000}</displayFormat>
        <label>Consultation Form</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consultation Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>