unpackaged/main/default/objects/Consultation_Form__c/fields/Acne_Oily_Skin__c.field-meta.xml
<CustomField>
    <fullName>Acne_Oily_Skin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acne/Oily Skin</label>
    <type>Checkbox</type>
</CustomField>