unpackaged/main/default/objects/Consultation_Form__c/fields/Advised_to_store_Sperm__c.field-meta.xml
<CustomField>
    <fullName>Advised_to_store_Sperm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advised to store Sperm</label>
    <type>Checkbox</type>
</CustomField>