unpackaged/main/default/objects/Consultation_Form__c/fields/Bloods_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Bloods_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bloods Reviewed?</label>
    <type>Checkbox</type>
</CustomField>