unpackaged/main/default/objects/Consultation_Form__c/fields/Cardiac_Failure__c.field-meta.xml
<CustomField>
    <fullName>Cardiac_Failure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cardiac Failure</label>
    <type>Checkbox</type>
</CustomField>