unpackaged/main/default/objects/Consultation_Form__c/fields/Chaperone_Offered__c.field-meta.xml
<CustomField>
    <fullName>Chaperone_Offered__c</fullName>
    <label>Chaperone Offered</label>
    <type>TextArea</type>
</CustomField>