unpackaged/main/default/objects/Consultation_Form__c/fields/Consultation_Date__c.field-meta.xml
<CustomField>
    <fullName>Consultation_Date__c</fullName>
    <description>Date that the Consultation took place</description>
    <inlineHelpText>Enter the date that the Consultation took place</inlineHelpText>
    <label>Consultation Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>