unpackaged/main/default/objects/Consultation_Form__c/fields/Consultation_Type__c.field-meta.xml
<CustomField>
    <fullName>Consultation_Type__c</fullName>
    <description>The format of the Consultation performed by the Doctor</description>
    <inlineHelpText>The format of the Consultation performed by the Doctor</inlineHelpText>
    <label>Consultation Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Consultation</fullName>
            </value>
            <value>
                <fullName>3 month follow up</fullName>
            </value>
            <value>
                <fullName>6+ month follow up</fullName>
            </value>
            <value>
                <fullName>Additional follow up</fullName>
            </value>
            <value>
                <fullName>Blood Test Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>