unpackaged/main/default/objects/Consultation_Form__c/fields/Consulting_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Doctor__c</fullName>
    <label>Consulting Doctor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dr Chris Airey</fullName>
            </value>
            <value>
                <fullName>Dr Aman Chungh</fullName>
            </value>
            <value>
                <fullName>Dr Lauren Airey</fullName>
            </value>
            <value>
                <fullName>Dr Zak Taylor</fullName>
            </value>
            <value>
                <fullName>Dr Nitin Shori</fullName>
                <isActive>false</isActive>
                <label>Dr Nitin Shori</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>