unpackaged/main/default/objects/Consultation_Form__c/fields/Consulting_Doctor_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Doctor_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consulting Doctor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Doctor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Consultation_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>