unpackaged/main/default/objects/Consultation_Form__c/fields/CVS_CVA_VTE_TIA__c.field-meta.xml
<CustomField>
    <fullName>CVS_CVA_VTE_TIA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CVS &amp; CVA &amp; VTE &amp; TIA</label>
    <type>Checkbox</type>
</CustomField>