unpackaged/main/default/objects/Consultation_Form__c/fields/Degree_of_Erection_Possible__c.field-meta.xml
<CustomField>
    <fullName>Degree_of_Erection_Possible__c</fullName>
    <label>Degree of Erection Possible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Half at best</fullName>
            </value>
            <value>
                <fullName>Sometimes full</fullName>
            </value>
            <value>
                <fullName>Unable to sustain erection</fullName>
            </value>
            <value>
                <fullName>Spontaneous erections</fullName>
            </value>
            <value>
                <fullName>Duration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>