unpackaged/main/default/objects/Consultation_Form__c/fields/Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis__c</fullName>
    <description>What was the OptiMale Doctor&#39;s diagnosis of the Patient?</description>
    <inlineHelpText>What was the OptiMale Doctor&#39;s diagnosis of the Patient?</inlineHelpText>
    <label>Diagnosis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>