unpackaged/main/default/objects/Consultation_Form__c/fields/Ejaculation_Issues__c.field-meta.xml
<CustomField>
    <fullName>Ejaculation_Issues__c</fullName>
    <label>Ejaculation Issues?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Premature</fullName>
            </value>
            <value>
                <fullName>Retarded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>