unpackaged/main/default/objects/Consultation_Form__c/fields/Eligible_for_TRT__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_TRT__c</fullName>
    <description>Is the patient eligible for TRT?</description>
    <inlineHelpText>Is the patient eligible for TRT?</inlineHelpText>
    <label>Eligible for TRT?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>