unpackaged/main/default/objects/Consultation_Form__c/fields/Fertility_Risk_Explained__c.field-meta.xml
<CustomField>
    <fullName>Fertility_Risk_Explained__c</fullName>
    <description>Fertility risk and no guarantee of fertility with HCG must be explained to the Patient by the Doctor</description>
    <inlineHelpText>Fertility risk and no guarantee of fertility with HCG must be explained to the Patient by the Doctor</inlineHelpText>
    <label>Fertility Risk Explained?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>