unpackaged/main/default/objects/Consultation_Form__c/fields/Follow_Up_Consultation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Consultation_Notes__c</fullName>
    <label>Follow Up Consultation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>