unpackaged/main/default/objects/Consultation_Form__c/fields/Further_investigations_required__c.field-meta.xml
<CustomField>
    <fullName>Further_investigations_required__c</fullName>
    <label>Further investigations required?</label>
    <type>TextArea</type>
</CustomField>