unpackaged/main/default/objects/Consultation_Form__c/fields/Future_disruption_of_HPG_Axis__c.field-meta.xml
<CustomField>
    <fullName>Future_disruption_of_HPG_Axis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Future disruption of HPG Axis</label>
    <type>Checkbox</type>
</CustomField>