unpackaged/main/default/objects/Consultation_Form__c/fields/Hypertension__c.field-meta.xml
<CustomField>
    <fullName>Hypertension__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hypertension</label>
    <type>Checkbox</type>
</CustomField>