unpackaged/main/default/objects/Consultation_Form__c/fields/Ineligible_for_TRT_reason__c.field-meta.xml
<CustomField>
    <fullName>Ineligible_for_TRT_reason__c</fullName>
    <description>If the patient is ineligible for TRT, select a reason why</description>
    <inlineHelpText>If the patient is ineligible for TRT, select a reason why</inlineHelpText>
    <label>Reason ineligible for TRT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PRL raised repeat required</fullName>
            </value>
            <value>
                <fullName>PSA repeat required</fullName>
            </value>
            <value>
                <fullName>MRI required</fullName>
            </value>
            <value>
                <fullName>DRE required</fullName>
            </value>
            <value>
                <fullName>Testosterone repeat required - too high</fullName>
            </value>
            <value>
                <fullName>Testosterone repeat required - too low</fullName>
            </value>
            <value>
                <fullName>Blood test results too old</fullName>
            </value>
            <value>
                <fullName>Patient wants to consider risks</fullName>
            </value>
            <value>
                <fullName>CV risk - Patient doesn’t want Rx</fullName>
            </value>
            <value>
                <fullName>Fertility risk - Patient doesn’t want Rx</fullName>
            </value>
            <value>
                <fullName>Fertility risk - wants to consider</fullName>
            </value>
            <value>
                <fullName>Needs MOJO test</fullName>
            </value>
            <value>
                <fullName>Needs Swimcount</fullName>
            </value>
            <value>
                <fullName>Hair loss - Patient doesn’t want Rx</fullName>
            </value>
            <value>
                <fullName>Sleep apnoea - needs invx</fullName>
            </value>
            <value>
                <fullName>Cost too high - can’t afford</fullName>
            </value>
            <value>
                <fullName>Cortisol needs repeating</fullName>
            </value>
            <value>
                <fullName>Occupation check with OH</fullName>
            </value>
            <value>
                <fullName>Hct too high</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Overweight</fullName>
                <isActive>false</isActive>
                <label>Overweight</label>
            </value>
            <value>
                <fullName>Risk factors</fullName>
                <isActive>false</isActive>
                <label>Risk factors</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>