unpackaged/main/default/objects/Consultation_Form__c/fields/Injection_Protocol_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Injection_Protocol_Discussed__c</fullName>
    <label>Injection Protocol Discussed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>