unpackaged/main/default/objects/Consultation_Form__c/fields/Injection_Tutorial_Offered__c.field-meta.xml
<CustomField>
    <fullName>Injection_Tutorial_Offered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Injection Tutorial Offered</label>
    <type>Checkbox</type>
</CustomField>