unpackaged/main/default/objects/Consultation_Form__c/fields/Libido_Issues__c.field-meta.xml
<CustomField>
    <fullName>Libido_Issues__c</fullName>
    <label>Libido Issues?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Secondary reduced</fullName>
            </value>
            <value>
                <fullName>Primary reduced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>