unpackaged/main/default/objects/Consultation_Form__c/fields/Male_Pattern_Baldness__c.field-meta.xml
<CustomField>
    <fullName>Male_Pattern_Baldness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Male Pattern Baldness</label>
    <type>Checkbox</type>
</CustomField>