unpackaged/main/default/objects/Consultation_Form__c/fields/Medical_History_Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Medical_History_Follow_Up__c</fullName>
    <description>Any follow up or new medical history information should be captured by the Doctor</description>
    <inlineHelpText>Any follow up or new medical history information should be captured by the Doctor</inlineHelpText>
    <label>Medical History Follow Up</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>