unpackaged/main/default/objects/Consultation_Form__c/fields/Monitor_BP_at_home__c.field-meta.xml
<CustomField>
    <fullName>Monitor_BP_at_home__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Patient advised to monitor Blood Pressure at home and see GP if consistently above 140/80</inlineHelpText>
    <label>Monitor BP at home &amp; if &gt;140/80 see GP</label>
    <type>Checkbox</type>
</CustomField>