unpackaged/main/default/objects/Consultation_Form__c/fields/New_Prescriptions__c.field-meta.xml
<CustomField>
    <fullName>New_Prescriptions__c</fullName>
    <description>New Medications the OptiMale Doctor has decided to prescribe for the Patient</description>
    <inlineHelpText>New Medications the OptiMale Doctor has decided to prescribe for the Patient</inlineHelpText>
    <label>New Prescriptions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Medications</valueSetName>
    </valueSet>
</CustomField>