unpackaged/main/default/objects/Consultation_Form__c/fields/Off_licence_Meds_Explained_Consent__c.field-meta.xml
<CustomField>
    <fullName>Off_licence_Meds_Explained_Consent__c</fullName>
    <description>Have off-licence medications been explained to the patient and have they given consent?</description>
    <inlineHelpText>Have off-licence medications been explained to the patient and have they given consent?</inlineHelpText>
    <label>Off-licence Meds Explained and Consent?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>