unpackaged/main/default/objects/Consultation_Form__c/fields/Ongoing_Medications__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_Medications__c</fullName>
    <description>TRT related Medications that the Patient is currently prescribed or taking</description>
    <inlineHelpText>TRT related Medications that the Patient is currently prescribed or taking</inlineHelpText>
    <label>On-going Medications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Medications</valueSetName>
    </valueSet>
</CustomField>