unpackaged/main/default/objects/Consultation_Form__c/fields/OSA__c.field-meta.xml
<CustomField>
    <fullName>OSA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OSA</label>
    <type>Checkbox</type>
</CustomField>