unpackaged/main/default/objects/Consultation_Form__c/fields/Other_notes__c.field-meta.xml
<CustomField>
    <fullName>Other_notes__c</fullName>
    <description>Any other notes should be entered here</description>
    <inlineHelpText>Any other notes should be entered here</inlineHelpText>
    <label>Other notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>