unpackaged/main/default/objects/Consultation_Form__c/fields/Patient_Satisfaction_Rating__c.field-meta.xml
<CustomField>
    <fullName>Patient_Satisfaction_Rating__c</fullName>
    <inlineHelpText>How happy do you think the patient currently is with Optimale and the treatment?</inlineHelpText>
    <label>Patient Satisfaction Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Happy</fullName>
            </value>
            <value>
                <fullName>Neutral / Unsure</fullName>
            </value>
            <value>
                <fullName>Unhappy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>