unpackaged/main/default/objects/Consultation_Form__c/fields/Photo_ID_Checked__c.field-meta.xml
<CustomField>
    <fullName>Photo_ID_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Photo ID Checked?</label>
    <type>Checkbox</type>
</CustomField>