unpackaged/main/default/objects/Consultation_Form__c/fields/Physical_Examination__c.field-meta.xml
<CustomField>
    <fullName>Physical_Examination__c</fullName>
    <description>Has a physical examination of the Patient been undertaken by the OptiMale Doctor? If so, what was examined and what were the results?</description>
    <inlineHelpText>Has a physical examination of the Patient been undertaken by the OptiMale Doctor? If so, what was examined and what were the results?</inlineHelpText>
    <label>Physical Examination?</label>
    <type>TextArea</type>
</CustomField>