unpackaged/main/default/objects/Consultation_Form__c/fields/Previous_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Previous_Risk_Level__c</fullName>
    <formula>TEXT(Patient__r.Risk_Level__c )</formula>
    <inlineHelpText>Previously Assessed Risk Level on Patient Record</inlineHelpText>
    <label>Previous Risk Level</label>
    <type>Text</type>
</CustomField>