unpackaged/main/default/objects/Consultation_Form__c/fields/Previous_Risk_Notes__c.field-meta.xml
<CustomField>
    <fullName>Previous_Risk_Notes__c</fullName>
    <formula>Patient__r.Risk_Notes__c</formula>
    <inlineHelpText>Previously Assessed Risk Notes on Patient Record</inlineHelpText>
    <label>Previous Risk Notes</label>
    <type>Text</type>
</CustomField>