unpackaged/main/default/objects/Consultation_Form__c/fields/Problems_Symptoms__c.field-meta.xml
<CustomField>
    <fullName>Problems_Symptoms__c</fullName>
    <label>Problems/Symptoms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>