unpackaged/main/default/objects/Consultation_Form__c/fields/Prostate_Cancer_Growth__c.field-meta.xml
<CustomField>
    <fullName>Prostate_Cancer_Growth__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prostate Cancer Growth</label>
    <type>Checkbox</type>
</CustomField>