unpackaged/main/default/objects/Consultation_Form__c/fields/Raised_Haematocrit_Stroke_MI_VTE__c.field-meta.xml
<CustomField>
    <fullName>Raised_Haematocrit_Stroke_MI_VTE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Raised Haematocrit, Stroke, MI, VTE</label>
    <type>Checkbox</type>
</CustomField>