unpackaged/main/default/objects/Consultation_Form__c/fields/Raised_Oestrogen__c.field-meta.xml
<CustomField>
    <fullName>Raised_Oestrogen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Raised Oestrogen</label>
    <type>Checkbox</type>
</CustomField>