unpackaged/main/default/objects/Consultation_Form__c/fields/Risk_Notes__c.field-meta.xml
<CustomField>
    <fullName>Risk_Notes__c</fullName>
    <label>Risk Notes</label>
    <type>TextArea</type>
</CustomField>