unpackaged/main/default/objects/Consultation_Form__c/fields/Risk_of_osteonecrosis_with_thrombophilia__c.field-meta.xml
<CustomField>
    <fullName>Risk_of_osteonecrosis_with_thrombophilia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Risk of Osteonecrosis with Thrombophilia</label>
    <type>Checkbox</type>
</CustomField>