unpackaged/main/default/objects/Consultation_Form__c/fields/Send_GP_Letter__c.field-meta.xml
<CustomField>
    <fullName>Send_GP_Letter__c</fullName>
    <description>Would the Patient like OptiMale to notify their GP of their treatment by sending the GP a letter?</description>
    <inlineHelpText>Would the Patient like OptiMale to notify their GP of their treatment by sending the GP a letter?</inlineHelpText>
    <label>Send GP Letter?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>