unpackaged/main/default/objects/Consultation_Form__c/fields/Soy_Cotton_Seed_or_Peanut_Allergy__c.field-meta.xml
<CustomField>
    <fullName>Soy_Cotton_Seed_or_Peanut_Allergy__c</fullName>
    <label>Soy, Cotton Seed or Peanut Allergy</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Soy</fullName>
            </value>
            <value>
                <fullName>Cotton Seed</fullName>
            </value>
            <value>
                <fullName>Peanut</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>