unpackaged/main/default/objects/Consultation_Form__c/fields/Test_Fertility__c.field-meta.xml
<CustomField>
    <fullName>Test_Fertility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Fertility</label>
    <type>Checkbox</type>
</CustomField>