unpackaged/main/default/objects/Consultation_Form__c/fields/Testicular_Atrophy__c.field-meta.xml
<CustomField>
    <fullName>Testicular_Atrophy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Testicular Atrophy</label>
    <type>Checkbox</type>
</CustomField>