unpackaged/main/default/objects/Consultation_Form__c/fields/Testosterone_treatments_explained__c.field-meta.xml
<CustomField>
    <fullName>Testosterone_treatments_explained__c</fullName>
    <label>Testosterone treatments explained</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>