unpackaged/main/default/objects/Consultation_Form__c/fields/Treatment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Start_Date__c</fullName>
    <formula>Patient__r.Treatment_Start_Date__c</formula>
    <label>Treatment Start Date</label>
    <type>Date</type>
</CustomField>