unpackaged/main/default/objects/Consultation_Form__c/fields/X45_20_inc_risk_TIA_MI_CVA_first_24_12__c.field-meta.xml
<CustomField>
    <fullName>X45_20_inc_risk_TIA_MI_CVA_first_24_12__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Over 45 20% increase risk of TIA, MI and CVA in first 24/12</description>
    <inlineHelpText>Over 45 20% increase risk of TIA, MI and CVA in first 24/12</inlineHelpText>
    <label>&gt;45 20% inc risk TIA/MI/CVA first 24/12</label>
    <type>Checkbox</type>
</CustomField>