unpackaged/main/default/objects/Consultation_Form__c/validationRules/Follow_Up_Consult_PT_Satisfaction_Rating.validationRule-meta.xml
<ValidationRule>
    <fullName>Follow_Up_Consult_PT_Satisfaction_Rating</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(Follow_Up_Consultation_Notes__c)),
ISBLANK(TEXT(  Patient_Satisfaction_Rating__c  ))
)</errorConditionFormula>
    <errorDisplayField>Patient_Satisfaction_Rating__c</errorDisplayField>
    <errorMessage>Please choose a Patient Satisfaction Rating</errorMessage>
</ValidationRule>