unpackaged/main/default/objects/Consultation_Form__c/validationRules/Follow_Up_Consult_Risk_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Follow_Up_Consult_Risk_Fields</fullName>
    <active>true</active>
    <description>Risk Notes and Risk Level are mandatory fields when completing consultation form</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(Follow_Up_Consultation_Notes__c)),
OR(
ISBLANK(Risk_Notes__c ),
ISBLANK(TEXT( Risk_Level__c ))
)
)</errorConditionFormula>
    <errorMessage>Please complete the Risk Notes and Risk Level fields</errorMessage>
</ValidationRule>