unpackaged/main/default/objects/Consultation_Form__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Consultation_Date__c</columns>
    <columns>Consultation_Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Patient__c</columns>
    <columns>Consulting_Doctor_Lookup__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>